--- a/TKV2025_soubory/sheet021.htm
+++ b/TKV2025_soubory/sheet021.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -409,7 +410,7 @@ else
   <td class=xl70 width=102 style='width:77pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - KOVÁRNA - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1086,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>23</td>
+  <td class=xl165 style='border-left:none'>24</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1219,7 +1220,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>10400</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>343
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>330
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1357,7 +1358,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8600</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>284
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>273
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1585,7 +1586,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>7250</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>239
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>230
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1814,11 +1815,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>6650</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>219
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>211
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl190 style='border-right:.5pt solid black;border-left:
+  <td colspan=2 class=xl191 style='border-right:.5pt solid black;border-left:
   none'>2 254 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2043,7 +2044,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>6350</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>209
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>201
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2181,7 +2182,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5050</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>167
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>160
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
