--- a/TKV2025_soubory/sheet030.htm
+++ b/TKV2025_soubory/sheet030.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -45,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=11574 style='border-collapse:
- collapse;table-layout:fixed;width:8701pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=11691 style='border-collapse:
+ collapse;table-layout:fixed;width:8789pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=230 style='mso-width-source:userset;mso-width-alt:8411;
@@ -229,8 +230,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=197 style='mso-width-source:userset;mso-width-alt:7204;
+ width:148pt'>
  <col class=xl70 width=97 style='mso-width-source:userset;mso-width-alt:3547;
  width:73pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -381,7 +382,7 @@ else
   <td class=xl70 width=97 style='width:73pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=197 style='width:148pt'></td>
   <td class=xl70 width=97 style='width:73pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -409,7 +410,7 @@ else
   <td class=xl70 width=97 style='width:73pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - MADEIRA - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1086,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>23</td>
+  <td class=xl165 style='border-left:none'>24</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1215,16 +1216,16 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>13700</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>19</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>14350</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>957
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>983
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>17,9</td>
+  <td class=xl148 style='border-top:none;border-left:none'>17,4</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1358,12 +1359,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8550</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>597
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>586
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>19</td>
+  <td class=xl165 style='border-top:none;border-left:none'>20</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1583,11 +1584,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Vierer Jaromír
   [CZE059373]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>7900</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>15</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>8150</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>552
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>558
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1811,16 +1812,16 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Bílek Radek [CZE008106]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>7300</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>17</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>7650</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>510
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>524
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl190 style='border-right:.5pt solid black;border-left:
-  none'>4 774 Kč</td>
+  <td colspan=2 class=xl191 style='border-right:.5pt solid black;border-left:
+  none'>4 872 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2040,11 +2041,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Smejkal František
   [CZE071305]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>11</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6550</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>12</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>7300</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>457
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>500
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2178,11 +2179,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Bílek Radek [CZE056362]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>11</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6350</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>12</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>6900</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>444
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>473
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2524,8 +2525,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>5900</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>13</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>6350</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2673,9 +2674,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Smejkal František
+  [CZE071305]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2855,9 +2859,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3035,9 +3041,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Bílek Radek [CZE056362]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3217,9 +3225,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3394,9 +3404,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šovčík Patrik [CZE074532]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3576,9 +3588,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Bílek Radek [CZE008106]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3753,9 +3767,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Vierer Jaromír
+  [CZE059373]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3785,10 +3802,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>14</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Procházka Petr
-  [CZE071371]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>5</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3350</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šovčík Patrik [CZE074532]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3450</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3964,9 +3980,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>15</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Nikodým Jan [CZE059228]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3300</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Procházka Petr
+  [CZE071371]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3350</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -4142,9 +4159,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>16</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Žiačiková Monika
-  [CZE078286]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Nikodým Jan [CZE059228]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='border:.5pt solid windowtext'>3300</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -4324,10 +4340,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>17</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Markovičová Lenka
-  [CZE072576]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Žiačiková Monika
+  [CZE078286]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3200</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3300</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -4502,10 +4518,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>18</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Veleková Dagmar
-  [CZE045129]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>7</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3150</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Markovičová Lenka
+  [CZE072576]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -4682,9 +4698,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>19</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Šovčík Patrik [CZE074532]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3100</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Veleková Dagmar
+  [CZE045129]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3150</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -15585,7 +15602,7 @@ else
   <td width=97 style='width:73pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=197 style='width:148pt'></td>
   <td width=97 style='width:73pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
